--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
-    "ejs": "3.1.6"
+    "ejs": "3.1.6",
+    "express": "4.17.1"
   },
   "devDependencies": {
     "nodemon": "1.18.4"
